--- a/chamber/index.html
+++ b/chamber/index.html
@@ -79,7 +79,7 @@
             />
           </picture>
           <h1>Welcome to Herriman</h1>
-          <p>Welcome to City of Herriman, Utah Chamber of Commerce page. Here you will find useful information on events and activities and employment Opportunities within Herriman town limits.</p>
+          <p>Welcome to City of Herriman, Utah Chamber of Commerce page. Here you will find useful information on events and activities and employment Opportunities within Herriman town limits.<br>
           <p>We invite you to check us out and see the daily events happening in our community and within the town of Herriman. We have see a lot of new incoming residents moving to Herriman Utah. Within just 2 miles of shopping and dining, Herriman is sure growing.</p>
       </div>
       
@@ -102,8 +102,9 @@
           <h2>Herriman, Utah Weather</h2>
           <img id="weatherIcon" src="" alt="">
           <h4 id="condition"></h4>
-          <br>
-          <p>Temperature: <span id="temp"></span> &#8457;<br>
+          <hr>
+          <p>
+            Temperature: <span id="temp"></span> &#8457;<br>
             Wind Speed: <span id="windSpeed"></span> mph <br>
           Wind Chill: <span id="windChill"></span> &#8457;</p>
       </div>
