--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -52,7 +52,7 @@
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/discover">Discover</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/contact">Contact</a></li>
           <li><a href="https://mjburn0428.github.io/WDD230/chamber/join">Join</a></li>
-          <li><a href="https://mjburn0428.github.io/WDD230/">Directory</a></li>
+          <li><a href="https://mjburn0428.github.io/WDD230/chamber/directory">Directory</a></li>
           <li><a href="https://herriman.applicantpro.com/jobs/">Careers</a></li>
         </ul>
       </nav>
